<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="etTotalAmount">Enter Amount</string>
    <string name="btnTenPercent">10%</string>
    <string name="btn15Percent">15%</string>
    <string name="btn20Percent">20%</string>
    <string name="tvTip"></string>

</resources>
