<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/etTotalAmount"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn15Percent"
        android:layout_marginTop="84dp"
        android:layout_toLeftOf="@+id/btn20Percent"
        android:text="@string/tvTip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn20Percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTip"
        android:layout_alignRight="@+id/etTotalAmount"
        android:layout_marginRight="14dp"
        android:onClick="onClick20PercentButton"
        android:text="@string/btn20Percent" />

    <Button
        android:id="@+id/btn10Percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTotalAmount"
        android:layout_centerVertical="true"
        android:onClick="onClick10PercentButton"
        android:text="@string/btnTenPercent" />

    <Button
        android:id="@+id/btn15Percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClick15PercentButton"
        android:text="@string/btn15Percent" />

</RelativeLayout>
